[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/1bitplatformerpack/Tiles/Transparent/tile_0260.png" type="Texture" id=1]
[ext_resource path="res://src/playground/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/1bitplatformerpack/Tiles/Transparent/tile_0263.png" type="Texture" id=3]
[ext_resource path="res://assets/1bitplatformerpack/Tiles/Transparent/tile_0261.png" type="Texture" id=4]
[ext_resource path="res://assets/1bitplatformerpack/Tiles/Transparent/tile_0262.png" type="Texture" id=5]
[ext_resource path="res://assets/1bitplatformerpack/Tiles/Transparent/tile_0264.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 6, 4 )

[sub_resource type="CanvasItemMaterial" id=29]

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "jump",
"speed": 20.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [  ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=30]
radius = 30.0167

[node name="Player" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 0
script = ExtResource( 2 )
INERTIA = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.41061e-13, -6 )
rotation = 1.5708
shape = SubResource( 27 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 29 )
position = Vector2( -8, -16 )
frames = SubResource( 28 )
animation = "idle"
playing = true
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 10.0
offset_v = -1.0

[node name="CooldownSoundWave" type="Timer" parent="."]
one_shot = true

[node name="HoldPosition" type="Position2D" parent="."]
position = Vector2( 19, -21 )

[node name="DiscoverArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiscoverArea"]
position = Vector2( 0, -6 )
shape = SubResource( 30 )

[connection signal="body_entered" from="DiscoverArea" to="." method="_on_DiscoverArea_body_entered"]
[connection signal="body_exited" from="DiscoverArea" to="." method="_on_DiscoverArea_body_exited"]
